--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@hapi/boom": "^10.0.1",
         "@upstash/redis": "^1.34.4",
-        "@whiskeysockets/baileys": "github:kiuur/bails",
+        "@whiskeysockets/baileys": "npm:baileys@latest",
+        "@rodrigogs/baileys-store":"^1.0.1",
         "awesome-phonenumber": "^6.4.0",
         "axios": "^0.27.2",
         "chalk": "^4.1.2",
